# opendora

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  package.json
.github/workflows/: ci.yml
.sisyphus/: boulder.json
.sisyphus/drafts/: opendora-competitive-gap.md
.sisyphus/evidence/: final-f1-plan-compliance.txt  final-f3-baseline.json  final-f3-eval.txt  final-f3-pytest.txt  final-f3-uv-sync.txt  final-f4-scope-scan.txt  fix-artifacts-retention-max-runs.txt  fix-debug-prompt-redaction.txt  fix-deep-agent-tests.txt  fix-policy-pre-routing.txt  task-1-pytest-full.txt  task-1-pytest-run-artifacts.txt  task-1-uv-sync.txt  task-10-warpgrep-invalidate.txt  task-11-nonretryable.txt  task-11-rotation.txt  task-12-allowlist.txt  task-13-policy.txt  task-14-tool-registry.txt  task-15-mcp.txt  (+14 more)
apps/orchestrator_py/: pyproject.toml
apps/orchestrator_py/src/orchestrator/: app.py  config.py  main.py
apps/orchestrator_py/src/orchestrator/adapters/: discord_gateway.py
apps/orchestrator_py/src/orchestrator/benchmarks/: __init__.py  baseline_report.py
apps/orchestrator_py/src/orchestrator/services/: codex_cli_runtime.py  context_offload.py  deep_agent.py  deep_agent_tools.py  logger.py  mcp_adapter.py  policy.py  run_artifacts.py  tool_registry.py  warpgrep_cache.py
apps/orchestrator_py/tests/: test_baseline_report.py  test_codex_cli_runtime.py  test_context_offload.py  test_deep_agent.py  test_deep_agent_tools.py  test_discord_gateway.py  test_docs_env_vars.py  test_e2e_smoke.py  test_eval_offline.py  test_run_artifacts.py  test_tool_registry.py
(+5 files in other folders)
