[project]
name = "opendora-orchestrator"
version = "0.1.0"
description = "Discord-driven remote Codex orchestrator"
requires-python = ">=3.11"
dependencies = [
  "discord.py>=2.4.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "structlog>=24.4.0",
  "langchain-core>=0.3.0",
  "langgraph>=0.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[project.scripts]
orchestrator = "orchestrator.main:run"
orchestrator-baseline = "orchestrator.benchmarks.baseline_report:run"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
